# sot-curves

./: .gitignore  CMakeLists.txt
include/: CMakeLists.txt
include/sot/curves/: bezier-line.h  bezier.h  gnurbsutil.h  interpolator.h  nurb.h  spline.h  timeline.h
src/: CMakeLists.txt  bezier-line.cc  bezier.cc  gnurbsutil.cc  interpolator.cc  nurb.cc  spline.cc  timeline.cc
src/dynamic_graph/sot/curves/: __init__.py
tests/: inter.py  nurb.py  test1.py  test2.py
